deployments/libreddit/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit-ingress
  namespace: libreddit
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: reddit.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "3600" #optional
    
spec:
  rules:
    - host: reddit.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libreddit
                port:
                  number: 8080
  tls:
    - secretName: reddit-tls
      hosts:
        - reddit.thekitty.zone
